example/grafana-google-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  template:
    spec:
      containers:
        - name: grafana
      volumes:
        - name: grafana-google-auth
          secret:
            secretName: grafana-google-auth
