example/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
    - host: demo-grafana.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /
